Refactor CSS styles and fix paths in frontend/src/App.css, frontend/src/pages/Home/Home.jsx, frontend/src/pages/OnlineExams/CreateExam/CreatePaper.jsx, frontend/src/pages/ModelPapers/ModelPapers.jsx, frontend/src/pages/ViewPayments/ViewPayments.jsx, frontend/src/pages/index.js, frontend/src/pages/Courses/Courses.jsx, frontend/src/components/Card/Card.jsx, and frontend/src/pages/Dashboards/TeacherDashboard/Dashboard.jsx

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -14,9 +14,17 @@
 
 body {
    font-family: 'Ubuntu', sans-serif;
+   margin-top: 70px;
 }
 
 /* Set the top of body padding */
 .main-content {
    margin-top: 70px;
+}
+
+.body-content {
+   margin-right: 20px;
+   margin-left: 20px;
+   margin-top: 120px;
+   margin-bottom: 50px;
 }
